# ex-bags

./: Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
backend/apps/applications/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/applications/migrations/: 0001_initial.py
backend/apps/contracts/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/contracts/migrations/: 0001_initial.py
backend/apps/contracts/templates/contracts/: base.html  comission.html  purchase.html  t.html  tradein.html
backend/apps/notifications/: tasks.py
backend/apps/notifications/services/: email.py  sms.py
backend/apps/offers/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/offers/migrations/: 0001_initial.py
backend/config/: celery.py  settings.py  urls.py
backend/config/settings/: base.py  local.py  production.py
frontend/: Dockerfile  package.json
frontend/src/: proxy.ts
frontend/src/api/: applications.ts  auth.ts  client.ts  contracts.ts  index.ts  offers.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/hooks/: index.ts  useApplicationForm.ts  useAuth.ts  useFileUpload.ts  useSmsCode.ts
frontend/src/store/: applicationStore.ts  authStore.ts  index.ts
frontend/src/types/: api.ts  application.ts  contract.ts  index.ts  offer.ts
frontend/src/utils/: constants.ts  formatters.ts  index.ts  validators.ts
nginx/conf.d/: default.conf
(+30 files in other folders)
